--- a/website/index.html
+++ b/website/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Sign In</title>
+    <title>Weather</title>
     <script src="app.js" defer></script>
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,300&display=swap"
